--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="saat"></h1>
     <h2 id="tarih"></h2>
 
-    <script src="scripts.js"><script>
+    <script src="scripts.js"> </script>
 
 </body>
 </html>
