--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
     <h2 id="tarih"></h2>
 
     <script src="scripts.js"> </script>
-
+      <p> eğer bunu okuyorsan bil ki senin arkandayım </p>
 </body>
 </html>
