--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="picture/download (3).jfif" alt="">
     <p>bu foto ne alaka bilmiyorum</p>
     <p>saat 00:32</p>
-    <!--kanks eğer bunu okuyorsan ve (incele) yaptıysan helal laa-->
+    <!--kanks eğer bunu okuyorsan kafana aduket çekeyim -->
     <p>
         Bir paragrafta<br>satırları kesmek için<br>br etiketini<br>kullanın.
         </p>
