--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
 
     <script src="scripts.js"> </script>
       <p> eğer bunu okuyorsan bil ki seni izliyorum </p>
-      <p> ne çok eğer bunu okuyorsan demişim amk bu arada bunu sıçarken yazıyorum ez <!p>
+      <p> ne çok eğer bunu okuyorsan demişim amk bu arada bunu sıçarken yazıyorum ez </p>
 </body>
 </html>
