--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <hr>
     <title>KODCU...</title>
     <P>KODCU...</P>
+    <p> SERVER SİLİNİP YENİDEN DÜZENLENECEKTİ </p>
     <hr>
     <P>KANKİ SEN BURDA NAPIYON LAAAAAAAAAA</P>
     <hr>
